--- a/projetosTeste/projeto2.html
+++ b/projetosTeste/projeto2.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
-        <img src="../imagens/37321548_533719613722233_3322347642305904640_n.jpg">
+        <!--<img src="../imagens/37321548_533719613722233_3322347642305904640_n.jpg" width="200">-->
+        <img src="../imagens/37321548_533719613722233_3322347642305904640_n.jpg" height="200">
     </body>
 </html>
